Parallelism analysis: Using boost::filesystem to clean up some work directories before the parallel loop starts.

--- a/asp/analysis/Makefile
+++ b/asp/analysis/Makefile
@@ -5,9 +5,9 @@ TARGET=libcppanalysis
 SRCS=cpp_analysis.cpp
 HEADERS=cpp_analysis.h
 
-INCDIR=-I/usr/lib/pymodules/python2.6/numpy/core/include/numpy -I/usr/include/python2.6 -I$(ASP_ROOT)/asp/analysis/glog/include
-LIBDIR=-L$(ASP_ROOT)/asp/analysis/glog/lib
-LIBS=-lglog
+INCDIR= -I/usr/local/include -I/usr/lib/pymodules/python2.6/numpy/core/include/numpy -I/usr/include/python2.6 -I$(ASP_ROOT)/asp/analysis/glog/include
+LIBDIR=-L$(ASP_ROOT)/asp/analysis/glog/lib -L/usr/local/lib
+LIBS=-lglog -lboost_filesystem
 FLAGS=-shared -g -Wall -fPIC
 EXTRA_FLAGS=-fopenmp -O3 -msse3 -Wno-unknown-pragmas 
 
